# ros2-minibot-temp

minibot/: CMakeLists.txt  package.xml
minibot/launch/: bringup_minibot.launch  display.launch  display_gazebo.launch
minibot/meshes/: battery_holder.stl  jetson_protection.stl  realsense_mount.stl
minibot/model/: d435.gazebo.xacro  minibot-moveit.urdf.xacro  minibot.gazebo.xacro  minibot.urdf  minibot.urdf.xacro  minibot_in_world.urdf.xacro
minibot_msgs/: CMakeLists.txt  package.xml
minibot_msgs/srv/: lss_4dof_pick.srv  lss_4dof_to_named.srv  lss_4dof_to_pose.srv  lss_4dof_to_pose_euler.srv
minibot_vision/: CMakeLists.txt  README.md  package.xml
minibot_vision/launch/: capture_imgs.launch  crop_sign.launch  crop_sign_rosparams.yaml
minibot_vision/resources/h5_model_bk/: model.h5
minibot_vision/resources/tfjs_model_bk/: metadata.json
minibot_vision/scripts/: Capture_Images.py  Crop_Sign_Depth.py  SegmentSign.py  SignDetector.py  TmClassification.py  TmClassificationLite.py  example_sign_classification.py  example_sign_classification_lite.py  useful_code_snippets.py
