<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>minibot</name>
 <version>0.0.1</version>
 <description>Mini Robot description and launch package | Migration from ROS1</description>
 <maintainer email="raffael.prem@student.uibk.ac.at">Raffael Prem</maintainer>
 <license>TODOn</license>

 <author email="simon.haller-seeber@uibk.ac.at">Simon Haller-Seeber</author>

 <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

 


 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>