<?xml version="1.0"?>
<package format="2">
  <name>minibot_msgs</name>
  <version>0.0.0</version>
  <description>The minibot_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raffael.prem@student.uibk.ac.at">Raffael Prem</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>






  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
